# FlareSolverr

./: .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  AHREFS_CAPTURE_README.md  CHANGELOG.md  Dockerfile  DockerfileNew  LICENSE  PROFILE_PATCH.md  Pipfile  RAWON_PROFILE_PATCH.md  README.md  build-binaries.js  demo_json_post.py  docker-compose.local.yml  docker-compose.yml  example_ahrefs_capture.py  flaresolverr.conf  flaresolverr.py  flaresolverr.service  flaresolverr_post_json.py  index.js  install.js  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  test-requirements.txt  test_json_post.py  test_json_validation.py  test_selenium_fetch.py  test_simple_json_post.py  tsconfig.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: autotag.yml  build.yml  publish.yml  release-docker.yml  release.yml
docker/: entrypoint.sh
flaresolverr/: __init__.py  build_package.py  dtos.py  exceptions.py  flaresolverr.py  flaresolverr_service.py  metrics.py  sessions.py  tests.py  tests_sites.py  utils.py
flaresolverr/bottle_plugins/: error_plugin.py  logger_plugin.py  prometheus_plugin.py
flaresolverr/undetected_chromedriver/: _compat.py  cdp.py  devtool.py  dprocess.py  reactor.py  webelement.py
html_samples/: cloudflare_captcha_hcaptcha_v1.html  cloudflare_captcha_norobot_v1.html  cloudflare_init_v1.html  cloudflare_spinner_v1.html
logs/: log.txt
src/: app.ts  build_package.py  dtos.py  flaresolverr.py  flaresolverr_service.py  index.ts  log.ts  metrics.py  network_interceptor.py  routes.ts  server.ts  session.ts  sessions.py  test_error_plugin.py  test_regressions.py  test_sploitus.py  tests.py  tests_captcha.py  tests_sites.py  types.ts  utils.py
src/bottle_plugins/: error_plugin.py  logger_plugin.py  prometheus_plugin.py
src/captcha/: 2captcha.py  __init__.py  anticaptcha  anticaptcha.ts  harvester.ts  hcaptcha-solver.ts  index.ts
src/controllers/: v1.ts
src/libs/: app.py  client.py  env.py  exception.py  logs.py  main.py  master.py  models.py  pipe.py  worker.py
src/providers/: cloudflare.ts
src/services/: log.ts  sessions.ts  solver.ts  utils.ts
src/tests/: app.test.ts
src/undetected_chromedriver/: __init__.py  devtool.py  dprocess.py  options.py  patcher.py  v2.py
windows-service/: README.md  install-windows-service.ps1
windows-service/winsw/: FlareSolverr.xml
